--- a/gprojectapp/templates/profile.html
+++ b/gprojectapp/templates/profile.html
@@ -54,7 +54,7 @@
                 <div class="profile-body">
                     <p class="profile-info"><strong>Username:</strong> {{ user.username }}</p>
                     <p class="profile-info"><strong>Email:</strong> {{ user.email }}</p>
-                    <p class="profile-info"><strong>Phone:</strong> {{ profile.phone }}</p>
+                    <p class="profile-info"><strong>Phone:</strong> {{ user.phone }}</p>
                 </div>
 
                 <div class="profile-footer">
